# api/gen/http/cli/hub/cli.go
@@ -32,7 +32,7 @@ func UsageCommands() string {
 catalog (refresh|refresh-all|catalog-error)
 category list
 rating (get|update)
-resource (list|versions-by-id|by-catalog-kind-name-version|by-catalog-kind-name-version-readme|by-catalog-kind-name-version-yaml|by-version-id|by-catalog-kind-name)
+resource (list|versions-by-id|by-catalog-kind-name-version|by-catalog-kind-name-version-readme|by-catalog-kind-name-version-yaml|by-version-id|by-catalog-kind-name|by-id)
 status status
 `
 }
@@ -46,9 +46,9 @@ func UsageExamples() string {
          "agent:create"
       ]
    }' --token "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE1Nzc4ODAzMDAsImlhdCI6MTU3Nzg4MDAwMCwiaWQiOjExLCJpc3MiOiJUZWt0b24gSHViIiwic2NvcGVzIjpbInJhdGluZzpyZWFkIiwicmF0aW5nOndyaXRlIiwiYWdlbnQ6Y3JlYXRlIl0sInR5cGUiOiJhY2Nlc3MtdG9rZW4ifQ.6pDmziSKkoSqI1f0rc4-AqVdcfY0Q8wA-tSLzdTCLgM"` + "\n" +
-		os.Args[0] + ` catalog refresh --catalog-name "tekton" --token "Voluptatem nulla laborum ut."` + "\n" +
+		os.Args[0] + ` catalog refresh --catalog-name "tekton" --token "Dolores dolor esse officia velit aliquid praesentium."` + "\n" +
 		os.Args[0] + ` category list` + "\n" +
-		os.Args[0] + ` rating get --id 14823265084100877150 --token "Suscipit voluptatem."` + "\n" +
+		os.Args[0] + ` rating get --id 4885181188430999896 --token "Deserunt non molestiae illo aut numquam."` + "\n" +
 		os.Args[0] + ` resource list` + "\n" +
 		""
 }
@@ -134,6 +134,9 @@ func ParseEndpoint(
 		resourceByCatalogKindNameNameFlag             = resourceByCatalogKindNameFlags.String("name", "REQUIRED", "Name of resource")
 		resourceByCatalogKindNamePipelinesversionFlag = resourceByCatalogKindNameFlags.String("pipelinesversion", "", "")
 
+		resourceByIDFlags  = flag.NewFlagSet("by-id", flag.ExitOnError)
+		resourceByIDIDFlag = resourceByIDFlags.String("id", "REQUIRED", "ID of a resource")
+
 		statusFlags = flag.NewFlagSet("status", flag.ContinueOnError)
 
 		statusStatusFlags = flag.NewFlagSet("status", flag.ExitOnError)
@@ -162,6 +165,7 @@ func ParseEndpoint(
 	resourceByCatalogKindNameVersionYamlFlags.Usage = resourceByCatalogKindNameVersionYamlUsage
 	resourceByVersionIDFlags.Usage = resourceByVersionIDUsage
 	resourceByCatalogKindNameFlags.Usage = resourceByCatalogKindNameUsage
+	resourceByIDFlags.Usage = resourceByIDUsage
 
 	statusFlags.Usage = statusUsage
 	statusStatusFlags.Usage = statusStatusUsage
@@ -271,6 +275,9 @@ func ParseEndpoint(
 			case "by-catalog-kind-name":
 				epf = resourceByCatalogKindNameFlags
 
+			case "by-id":
+				epf = resourceByIDFlags
+
 			}
 
 		case "status":
@@ -364,6 +371,9 @@ func ParseEndpoint(
 			case "by-catalog-kind-name":
 				endpoint = c.ByCatalogKindName()
 				data, err = resourcec.BuildByCatalogKindNamePayload(*resourceByCatalogKindNameCatalogFlag, *resourceByCatalogKindNameKindFlag, *resourceByCatalogKindNameNameFlag, *resourceByCatalogKindNamePipelinesversionFlag)
+			case "by-id":
+				endpoint = c.ByID()
+				data, err = resourcec.BuildByIDPayload(*resourceByIDIDFlag)
 			}
 		case "status":
 			c := statusc.NewClient(scheme, host, doer, enc, dec, restore)
@@ -447,7 +457,7 @@ Refresh a Catalog by it's name
     -token STRING: 
 
 Example:
-    `+os.Args[0]+` catalog refresh --catalog-name "tekton" --token "Voluptatem nulla laborum ut."
+    `+os.Args[0]+` catalog refresh --catalog-name "tekton" --token "Dolores dolor esse officia velit aliquid praesentium."
 `, os.Args[0])
 }
 
@@ -458,7 +468,7 @@ Refresh all catalogs
     -token STRING: 
 
 Example:
-    `+os.Args[0]+` catalog refresh-all --token "Architecto rerum id quia."
+    `+os.Args[0]+` catalog refresh-all --token "Sed optio ab beatae est."
 `, os.Args[0])
 }
 
@@ -519,7 +529,7 @@ Find user's rating for a resource
     -token STRING: 
 
 Example:
-    `+os.Args[0]+` rating get --id 14823265084100877150 --token "Suscipit voluptatem."
+    `+os.Args[0]+` rating get --id 4885181188430999896 --token "Deserunt non molestiae illo aut numquam."
 `, os.Args[0])
 }
 
@@ -533,8 +543,8 @@ Update user's rating for a resource
 
 Example:
     `+os.Args[0]+` rating update --body '{
-      "rating": 4
-   }' --id 13079036966868018111 --token "Dolores at."
+      "rating": 1
+   }' --id 1687719581640533880 --token "Non illo accusantium aut iste."
 `, os.Args[0])
 }
 
@@ -552,6 +562,7 @@ COMMAND:
     by-catalog-kind-name-version-yaml: Find resource README using name of catalog & name, kind and version of resource
     by-version-id: Find a resource using its version's id
     by-catalog-kind-name: Find resources using name of catalog, resource name and kind of resource
+    by-id: Find a resource using it's id
 
 Additional help:
     %s resource COMMAND --help
@@ -616,7 +627,7 @@ Find resource README using name of catalog & name, kind and version of resource
     -version STRING: version of resource
 
 Example:
-    `+os.Args[0]+` resource by-catalog-kind-name-version-yaml --catalog "tektoncd" --kind "task" --name "buildah" --version "0.1"
+    `+os.Args[0]+` resource by-catalog-kind-name-version-yaml --catalog "tektoncd" --kind "pipeline" --name "buildah" --version "0.1"
 `, os.Args[0])
 }
 
@@ -641,7 +652,18 @@ Find resources using name of catalog, resource name and kind of resource
     -pipelinesversion STRING: 
 
 Example:
-    `+os.Args[0]+` resource by-catalog-kind-name --catalog "tektoncd" --kind "pipeline" --name "buildah" --pipelinesversion "0.21.0"
+    `+os.Args[0]+` resource by-catalog-kind-name --catalog "tektoncd" --kind "task" --name "buildah" --pipelinesversion "0.21.0"
+`, os.Args[0])
+}
+
+func resourceByIDUsage() {
+	fmt.Fprintf(os.Stderr, `%s [flags] resource by-id -id UINT
+
+Find a resource using it's id
+    -id UINT: ID of a resource
+
+Example:
+    `+os.Args[0]+` resource by-id --id 1
 `, os.Args[0])
 }
 
