# api/gen/http/resource/server/server.go
@@ -27,6 +27,7 @@ type Server struct {
 	ByCatalogKindNameVersionYaml   http.Handler
 	ByVersionID                    http.Handler
 	ByCatalogKindName              http.Handler
+	ByID                           http.Handler
 	CORS                           http.Handler
 }
 
@@ -70,6 +71,7 @@ func New(
 			{"ByCatalogKindNameVersionYaml", "GET", "/resource/{catalog}/{kind}/{name}/{version}/yaml"},
 			{"ByVersionID", "GET", "/resource/version/{versionID}"},
 			{"ByCatalogKindName", "GET", "/resource/{catalog}/{kind}/{name}"},
+			{"ByID", "GET", "/resource/{id}"},
 			{"CORS", "OPTIONS", "/resources"},
 			{"CORS", "OPTIONS", "/resource/{id}/versions"},
 			{"CORS", "OPTIONS", "/resource/{catalog}/{kind}/{name}/{version}"},
@@ -77,6 +79,7 @@ func New(
 			{"CORS", "OPTIONS", "/resource/{catalog}/{kind}/{name}/{version}/yaml"},
 			{"CORS", "OPTIONS", "/resource/version/{versionID}"},
 			{"CORS", "OPTIONS", "/resource/{catalog}/{kind}/{name}"},
+			{"CORS", "OPTIONS", "/resource/{id}"},
 		},
 		List:                           NewListHandler(e.List, mux, decoder, encoder, errhandler, formatter),
 		VersionsByID:                   NewVersionsByIDHandler(e.VersionsByID, mux, decoder, encoder, errhandler, formatter),
@@ -85,6 +88,7 @@ func New(
 		ByCatalogKindNameVersionYaml:   NewByCatalogKindNameVersionYamlHandler(e.ByCatalogKindNameVersionYaml, mux, decoder, encoder, errhandler, formatter),
 		ByVersionID:                    NewByVersionIDHandler(e.ByVersionID, mux, decoder, encoder, errhandler, formatter),
 		ByCatalogKindName:              NewByCatalogKindNameHandler(e.ByCatalogKindName, mux, decoder, encoder, errhandler, formatter),
+		ByID:                           NewByIDHandler(e.ByID, mux, decoder, encoder, errhandler, formatter),
 		CORS:                           NewCORSHandler(),
 	}
 }
@@ -101,6 +105,7 @@ func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.ByCatalogKindNameVersionYaml = m(s.ByCatalogKindNameVersionYaml)
 	s.ByVersionID = m(s.ByVersionID)
 	s.ByCatalogKindName = m(s.ByCatalogKindName)
+	s.ByID = m(s.ByID)
 	s.CORS = m(s.CORS)
 }
 
@@ -113,6 +118,7 @@ func Mount(mux goahttp.Muxer, h *Server) {
 	MountByCatalogKindNameVersionYamlHandler(mux, h.ByCatalogKindNameVersionYaml)
 	MountByVersionIDHandler(mux, h.ByVersionID)
 	MountByCatalogKindNameHandler(mux, h.ByCatalogKindName)
+	MountByIDHandler(mux, h.ByID)
 	MountCORSHandler(mux, h.CORS)
 }
 
@@ -455,6 +461,57 @@ func NewByCatalogKindNameHandler(
 	})
 }
 
+// MountByIDHandler configures the mux to serve the "resource" service "ById"
+// endpoint.
+func MountByIDHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := handleResourceOrigin(h).(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("GET", "/resource/{id}", f)
+}
+
+// NewByIDHandler creates a HTTP handler which loads the HTTP request and calls
+// the "resource" service "ById" endpoint.
+func NewByIDHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeByIDRequest(mux, decoder)
+		encodeResponse = EncodeByIDResponse(encoder)
+		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "ById")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "resource")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			errhandler(ctx, w, err)
+		}
+	})
+}
+
 // MountCORSHandler configures the mux to serve the CORS endpoints for the
 // service resource.
 func MountCORSHandler(mux goahttp.Muxer, h http.Handler) {
@@ -472,6 +529,7 @@ func MountCORSHandler(mux goahttp.Muxer, h http.Handler) {
 	mux.Handle("OPTIONS", "/resource/{catalog}/{kind}/{name}/{version}/yaml", f)
 	mux.Handle("OPTIONS", "/resource/version/{versionID}", f)
 	mux.Handle("OPTIONS", "/resource/{catalog}/{kind}/{name}", f)
+	mux.Handle("OPTIONS", "/resource/{id}", f)
 }
 
 // NewCORSHandler creates a HTTP handler which returns a simple 200 response.
