# api/gen/http/resource/server/types.go
@@ -185,3 +185,11 @@ func NewByCatalogKindNamePayload(catalog string, kind string, name string, pipel
 
 	return v
 }
+
+// NewByIDPayload builds a resource service ById endpoint payload.
+func NewByIDPayload(id uint) *resource.ByIDPayload {
+	v := &resource.ByIDPayload{}
+	v.ID = id
+
+	return v
+}
