# api/gen/resource/endpoints.go
@@ -22,6 +22,7 @@ type Endpoints struct {
 	ByCatalogKindNameVersionYaml   goa.Endpoint
 	ByVersionID                    goa.Endpoint
 	ByCatalogKindName              goa.Endpoint
+	ByID                           goa.Endpoint
 }
 
 // NewEndpoints wraps the methods of the "resource" service with endpoints.
@@ -34,6 +35,7 @@ func NewEndpoints(s Service) *Endpoints {
 		ByCatalogKindNameVersionYaml:   NewByCatalogKindNameVersionYamlEndpoint(s),
 		ByVersionID:                    NewByVersionIDEndpoint(s),
 		ByCatalogKindName:              NewByCatalogKindNameEndpoint(s),
+		ByID:                           NewByIDEndpoint(s),
 	}
 }
 
@@ -46,6 +48,7 @@ func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
 	e.ByCatalogKindNameVersionYaml = m(e.ByCatalogKindNameVersionYaml)
 	e.ByVersionID = m(e.ByVersionID)
 	e.ByCatalogKindName = m(e.ByCatalogKindName)
+	e.ByID = m(e.ByID)
 }
 
 // NewListEndpoint returns an endpoint function that calls the method "List" of
@@ -112,5 +115,14 @@ func NewByCatalogKindNameEndpoint(s Service) goa.Endpoint {
 	return func(ctx context.Context, req interface{}) (interface{}, error) {
 		p := req.(*ByCatalogKindNamePayload)
 		return s.ByCatalogKindName(ctx, p)
+	}
+}
+
+// NewByIDEndpoint returns an endpoint function that calls the method "ById" of
+// service "resource".
+func NewByIDEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req interface{}) (interface{}, error) {
+		p := req.(*ByIDPayload)
+		return s.ByID(ctx, p)
 	}
 }
